revert to 1.8