@@ -3,9 +3,11 @@ package io.github.rainvaporeon.customenchantments.util.infusions;
 import io.github.rainvaporeon.customenchantments.enchant.Infusion;
 
 import javax.annotation.Nullable;
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 public final class InfusionManager {
 
@@ -19,12 +21,12 @@ public final class InfusionManager {
         return infusions.remove(base);
     }
 
-    public static List<Infusion> getInfusions() {
-        return List.copyOf(infusions);
+    public static Set<Infusion> getInfusions() {
+        return Collections.unmodifiableSet(infusions);
     }
 
     public static List<String> getInfusionIdentifiers() {
-        return infusions.stream().map(Infusion::getIdentifier).toList();
+        return infusions.stream().map(Infusion::getIdentifier).collect(Collectors.toList());
     }
 
     public static @Nullable Infusion getInfusionByName(String name) {
